Moves a bunch of article styles into a #shine-article namespace - makes it easier to distinguish what styles are actually specific to the article pages - Also removing ES6 syntax from shine.js since it doesn't seem to work on Safari - Plus fixes to navbar links and pointer style on article preview elements to fix them on Safari and Firefox respectively

--- a/styles/navbar.less
+++ b/styles/navbar.less
@@ -27,7 +27,7 @@
     top: 50%;
 
     .navbar-links {
-      display: inline;
+      display: inline-block;
       margin-left: @margin-md;
 
       a {
